# src/routes/auth.route.ts
@@ -1,5 +1,10 @@
 import { Router } from "express";
-import { login, register } from "../controllers/auth.controller";
+import {
+  login,
+  logout,
+  refreshToken,
+  register,
+} from "../controllers/auth.controller";
 import { validate } from "../middlewares/validate";
 import { LoginSchema, registerSchema } from "../validations/auth.validate";
 
@@ -7,5 +12,7 @@ const router = Router();
 
 router.route("/register").post(validate(registerSchema), register);
 router.route("/login").post(validate(LoginSchema), login);
+router.route("/refresh").post(refreshToken);
+router.route("/logout").post(logout);
 
 export default router;
